# mecanica-classica-e-quantica-n-corpos

./: .gitignore  Makefile  README.md  app.py  arquitetura.md  arquitetura_sistema.md  config.yaml  execution_metrics.gnuplot  explicacao.md  funcoes_principais_simulacao.md  integrador.md  integradores_utilizados.md  main.py  mecanica_problema_dois_corpos.py  pyproject.toml  render_results.py  requirements.txt  simulador_gravitacao.py  trabalho.md
create_animations/: create_animations.py
scenarios/: scenario_1_equal_close_rest.yaml  scenario_1_equal_close_velocity.yaml  scenario_1_equal_far_rest.yaml  scenario_1_equal_far_velocity.yaml  scenario_2_different_close_rest.yaml  scenario_2_different_close_velocity.yaml  scenario_2_different_far_rest.yaml  scenario_2_different_far_velocity.yaml  scenario_2_unequal_close_rest.yaml  scenario_2_unequal_close_velocity.yaml  scenario_2_unequal_far_rest.yaml  scenario_2_unequal_far_velocity.yaml  scenario_7.yaml  scenario_7_different_star_moderate_loss.yaml  scenario_7_equal_asymmetric_mass_loss.yaml  scenario_7_unequal_star_moderate_mass_loss.yaml  scenario_test.yaml
simulacao_adhoc/: main.py  plot.py  simulacao.py
src/: 2d.py  analysis.py  calculos.py  performance_metrics.py  plot.py  prepare_execution_chart_data.py  simulacao.py  trabalho_analysis.py  utils.py
