[project]
name = "mecanica-classica-e-quantica-n-corpos"
version = "0.1.0"
description = "Simulacoes gravitacionais para o projeto de mecanica classica e quantica."
authors = []
requires-python = ">=3.13,<4.0"
dependencies = [
    "celluloid==0.2.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.11.0",
    "numpy==2.4.6",
    "packaging==26.2",
    "pillow==12.2.0",
    "psutil==7.1.3",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "scipy==1.17.1",
    "six==1.17.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
